--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div id="sideNavigation" class="sidenav">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <a href="https://discord.gg/eBP7vbQyqh" target="_blank">notre discord</a>
-        <a href="file:///C:/Users/cgpai/Desktop/krakensite/kraken/kraken.html">notre serveur</a>
+        <a href="https://bapt35700.github.io/notreserveur/">notre serveur</a>
         <a href="https://bapt35700.github.io/nosphotos/">nos photos</a>
         <a href="https://bapt35700.github.io/nouscontacter/">nous contacter</a>
     </div>
